[package]
name = "rpcpu"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
log = "0.4.27"
simplelog = "0.12.2"

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
